Agregando listado de desarrolladores, refactorizando y ordenando estructura del proyecto

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
+
+    <Button
+        android:id="@+id/btnluis"
+        android:layout_width="wrap_content"
+        android:layout_height="80sp"
+        android:layout_marginTop="204dp"
+        android:onClick="onClick"
+        android:text="@string/main_a_text3"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnestefani"
+        android:layout_width="194dp"
+        android:layout_height="80sp"
+        android:layout_marginTop="108dp"
+        android:onClick="onClick"
+        android:text="@string/main_a_text2"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.903"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnmariano"
-        android:layout_width="194dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="76dp"
-        android:onClick="formulario"
-        android:text="IR A FORMULARIO DE MARIANO"
+        android:layout_width="180sp"
+        android:layout_height="80sp"
+        android:layout_marginTop="16dp"
+        android:onClick="onClick"
+        android:text="@string/main_a_text1"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
