--- a/app/src/main/res/layout/enfermero_card.xml
+++ b/app/src/main/res/layout/enfermero_card.xml
@@ -1,56 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_constraint"
+        android:layout_width="match_parent"
+        android:layout_height="204dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/enfermero_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="120sp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:srcCompat="@tools:sample/avatars" />
 
-            <TextView
-                android:id="@+id/enfermero_apellidos3"
-                android:layout_width="94dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:text="TextView"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/enfermero_image"
-                app:layout_constraintTop_toBottomOf="@+id/enfermero_apellidos" />
+        <TextView
+            android:id="@+id/enfermero_nombres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="cursive"
+            android:gravity="center_horizontal"
+            android:text="@string/enfermero_nombre"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enfermero_apellidos" />
 
-            <ImageView
-                android:id="@+id/enfermero_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.056"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/enfermero_apellidos"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="cursive"
+            android:gravity="center_horizontal"
+            android:text="@string/enfermero_apellidos"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enfermero_image" />
 
-            <TextView
-                android:id="@+id/enfermero_apellidos"
-                android:layout_width="94dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                android:text="TextView"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/enfermero_image"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
